client/css: fix combobox height on Firefox
https://bugzilla.mozilla.org/show_bug.cgi?id=454625

--- a/client/css/forms.styl
+++ b/client/css/forms.styl
@@ -159,8 +159,7 @@ input[type=password]
     vertical-align: top
     font-family: 'Droid Sans', sans-serif
     font-size: 100%
-    line-height: 150%
-    padding: 0 0.3em
+    padding: 0.25em 0.3em
     text-overflow: ellipsis
     width: 100%
     box-sizing: border-box
